// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot already-imported 1`] = `
"
// @flow
import type { State as AppState } from './App/reducer'

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from './App/reducer';

import { initialState as appState } from './App/reducer';

export type State = {
  app: AppState;
};

const initialState: State = {
  app: appState
};

export default initialState;
"
`;

exports[`snapshot basic 1`] = `
"


      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from \\"./App/reducer\\";

import { initialState as appState } from \\"./App/reducer\\";

export type State = {
  app: AppState;
};

const initialState: State = {
  app: appState
};

export default initialState;
"
`;

exports[`snapshot reducer-basic 1`] = `
"


      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from \\"./App/reducer\\";

import { initialState as appState } from \\"./App/reducer\\";

export type State = {
  app: AppState;
};

const initialState: State = {
  app: appState
};

export default initialState;
"
`;

exports[`snapshot remove 1`] = `
"
// @flow
import type { State as AppState } from './App/reducer'

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;

exports[`snapshot some-state 1`] = `
"
// @flow
import type { State as HogeState } from './Hoge/reducer'

export type State = {
  hoge: HogeState,
}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from './App/reducer';
import type { State as HogeState } from './Hoge/reducer';

import { initialState as appState } from './App/reducer';
import { initialState as hogeState } from './Hoge/reducer';

export type State = {
  app: AppState;
  hoge: HogeState;
};

const initialState: State = {
  app: appState,
  hoge: hogeState
};

export default initialState;
"
`;

exports[`snapshot some-state2 1`] = `
"
// @flow

export type State = {
  hoge: HogeState,
}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from \\"./App/reducer\\";

import { initialState as appState } from \\"./App/reducer\\";

export type State = {
  app: AppState;
};

const initialState: State = {
  app: appState
};

export default initialState;
"
`;
